--- a/style.css
+++ b/style.css
@@ -207,6 +207,12 @@ footer p {
 .img{
     border-radius: 10px;
     margin: 5px;
+    width: 100%;
+}
+.imgraf{
+    border-radius: 10px;
+    margin: 5px;
+    width: 100%;
 }
 h4{
     font-weight: normal;
