--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 body{
     margin: 0;
     padding: 0;
+    background-color: #000;
+    background-image: url('Images/Parallax.jpg');
 }
 .parallax{
     background-image: url('Images/Parallax.jpg');
@@ -237,4 +239,19 @@ h4{
 }
 .contenedor-flex h2 {
     text-align: center;
+}
+body::-webkit-scrollbar {
+    width: 12px;
+}
+body::-webkit-scrollbar-track {
+    background: #a4a4a4;
+    border-radius: 10px;
+}
+body::-webkit-scrollbar-thumb {
+    background-color: #1a1a1a; 
+    border-radius: 10px;
+    border: 2px solid #a4a4a4; 
+}
+body::-webkit-scrollbar-thumb:hover {
+    background-color: #000000; 
 }
