--- a/style.css
+++ b/style.css
@@ -387,16 +387,13 @@ body::-webkit-scrollbar {
     width: 12px;
 }
 body::-webkit-scrollbar-track {
-    background: #a4a4a4;
+    background: #000000;
     border-radius: 10px;
 }
 body::-webkit-scrollbar-thumb {
-    background-color: #1a1a1a;
+    background-color: #0A2342;
     border-radius: 10px;
-    border: 2px solid #a4a4a4;
-}
-body::-webkit-scrollbar-thumb:hover {
-    background-color: #000000;
+    border: 2px solid #000000;
 }
 .logo{
     max-width: 100%;
